--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.9.1
+dj-database-url==3.0.1
 Django==5.2.4
+django-cors-headers==4.7.0
+django-login-required-middleware==0.9.0
 djangorestframework==3.16.0
-djangorestframework_simplejwt==5.5.1
-dotenv==0.9.9
+djangorestframework_simplejwt==5.5.0
 psycopg2-binary==2.9.10
-PyJWT==2.10.1
+PyJWT==2.9.0
 python-dotenv==1.1.1
 sqlparse==0.5.3
+tzdata==2025.2
