--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.9.1
 Django==5.2.4
 django-cors-headers==4.7.0
+django-login-required-middleware==0.9.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 dotenv==0.9.9
